networking/services/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-ci
spec:
  selector:
    app: python-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
