networking/services/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-lb
spec:
  selector:
    app: python-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
