networking/services/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-np
spec:
  selector:
    app: python-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 5000
